# mx-exchange-tools-sc

./: .gitignore  Cargo.toml  README.md
auto-farm/: Cargo.toml  multicontract.toml
auto-farm/interact-rs/: Cargo.toml
auto-farm/interact-rs/src/: interact.rs  lib.rs
auto-farm/meta/: Cargo.toml
auto-farm/meta/src/: main.rs
auto-farm/src/: address_to_id_mapper.rs  common_storage.rs  events.rs  farm_actions.rs  farm_external_storage_read.rs  farms_whitelist.rs  fees.rs  fees_collector_actions.rs  lib.rs  locked_token_merging.rs  metabonding_actions.rs  registration.rs  user_farm_actions.rs  user_farm_tokens.rs  user_rewards.rs
auto-farm/src/common/: address_to_id_mapper.rs  chain_info.rs  common_storage.rs  mod.rs  rewards_wrapper.rs  unique_payments.rs
auto-farm/src/external_sc_interactions/: farm_actions.rs  farm_with_locked_rewards_proxy.rs  fees_collector_actions.rs  locked_token_merging.rs  metabonding_actions.rs  metastaking_actions.rs  mod.rs  multi_contract_interactions.rs
auto-farm/src/external_storage_read/: farm_storage_read.rs  metastaking_storage_read.rs  mod.rs
auto-farm/src/user_tokens/: mod.rs  user_farm_tokens.rs  user_metastaking_tokens.rs  user_rewards.rs  withdraw_tokens.rs
auto-farm/src/whitelists/: farms_whitelist.rs  metastaking_whitelist.rs  mod.rs
auto-farm/tests/: auto_compound_test.rs  farm_claim_test.rs  other_scs_claim_test.rs  register_test.rs
auto-farm/tests/farm_staking_setup/: mod.rs
auto-farm/tests/farm_with_locked_rewards_setup/: mod.rs
auto-farm/tests/fees_collector_setup/: mod.rs
auto-farm/tests/metabonding_setup/: mod.rs
auto-farm/wasm/: Cargo.toml
auto-farm/wasm/src/: lib.rs
auto-pos-creator/: Cargo.toml  multicontract.toml  sc-config.toml
auto-pos-creator/interact/: Cargo.toml  config.toml  state.toml
auto-pos-creator/interact/src/: auto_pos_creator_config.rs  auto_pos_creator_interact.rs
auto-pos-creator/meta/: Cargo.toml
auto-pos-creator/meta/src/: main.rs
auto-pos-creator/src/: auto_pos_creator_proxy.rs  lib.rs
auto-pos-creator/src/common/: payments_wrapper.rs
auto-pos-creator/src/configs/: auto_farm_config.rs  mod.rs  pairs_config.rs  read_external_storage.rs
auto-pos-creator/src/external_sc_interactions/: egld_wrapper_actions.rs  farm_actions.rs  farm_staking_actions.rs  metastaking_actions.rs  mod.rs  multi_contract_interactions.rs  pair_actions.rs  router_actions.rs
auto-pos-creator/src/multi_contract_interactions/: create_pos.rs  create_pos_endpoints.rs  exit_pos.rs  exit_pos_endpoints.rs  mod.rs
auto-pos-creator/tests/: create_pair_pos_test.rs  negative_tests.rs
auto-pos-creator/tests/metastaking_setup/: mod.rs
auto-pos-creator/tests/pair_setup/: mod.rs
auto-pos-creator/tests/pos_creator_setup/: mod.rs
auto-pos-creator/tests/router_setup/: mod.rs
auto-pos-creator/wasm/: Cargo.toml
auto-pos-creator/wasm/src/: lib.rs
composable-tasks/: Cargo.toml  README.md  sc-config.toml
composable-tasks/interact/: Cargo.toml  config.toml  state.toml
composable-tasks/interact-rs/: Cargo.toml
composable-tasks/interact-rs/src/: interactor_main.rs  proxy.rs
composable-tasks/interact/src/: composable_tasks_config.rs  composable_tasks_interact.rs
composable-tasks/meta/: Cargo.toml
composable-tasks/meta/src/: main.rs
composable-tasks/scenarios/: empty.scen.json
composable-tasks/src/: composable_tasks.rs  composable_tasks_proxy.rs  compose_tasks.rs  config.rs  errors.rs  events.rs  lib.rs  task_call.rs
composable-tasks/src/task_types/: mod.rs  (+1 more)
composable-tasks/tests/: composable_tasks_blackbox_tests.rs  composable_tasks_tests.rs  empty_scenario_rs_test.rs
composable-tasks/wasm/: Cargo.toml
dca-module/: .gitignore  Cargo.toml
dca-module/meta/: Cargo.toml
dca-module/output/: dca-module.abi.json  dca-module.imports.json  dca-module.mxsc.json  dca-module.wasm
dca-module/src/: events.rs  lib.rs  pair_actions.rs  router_actions.rs  user_funds.rs
dca-module/tests/: dca_module_test.rs
dca-module/wasm/: Cargo.toml
energy-dao/: Cargo.toml  README.md
energy-dao/meta/: Cargo.toml
energy-dao/src/: lib.rs
energy-dao/tests/: farm_tests.rs  metastaking_tests.rs  test.rs
energy-dao/wasm/: Cargo.toml
exchange-deployer/: Cargo.toml
exchange-deployer/meta/: Cargo.toml
exchange-deployer/output/: exchange-deployer.abi.json  exchange-deployer.imports.json  exchange-deployer.mxsc.json  exchange-deployer.wasm
exchange-deployer/src/: action_type.rs  fee.rs  lib.rs
exchange-deployer/wasm/: Cargo.toml
farm-extra-rewards-wrapper/: Cargo.toml  multicontract.toml
farm-extra-rewards-wrapper/meta/: Cargo.toml
farm-extra-rewards-wrapper/src/: lib.rs  reward_tokens.rs  single_token_rewards.rs  wrapped_farm_attributes.rs
farm-extra-rewards-wrapper/tests/: multi_farm_rewards_test.rs
farm-extra-rewards-wrapper/wasm/: Cargo.toml
locked-token-pos-creator/: Cargo.toml
locked-token-pos-creator/meta/: Cargo.toml
locked-token-pos-creator/src/: create_farm_pos.rs  create_locked_pos.rs  create_pair_pos.rs  create_pos.rs  lib.rs
locked-token-pos-creator/tests/: create_locked_pos_test.rs  create_pos_test.rs
locked-token-pos-creator/wasm/: Cargo.toml
order-book/: Cargo.toml
order-book/meta/: Cargo.toml
order-book/output/: order-book.abi.json  order-book.imports.json  order-book.mxsc.json  order-book.wasm
order-book/src/: events.rs  lib.rs  pause.rs
order-book/tests/: order_book_test.rs
order-book/wasm/: Cargo.toml
tests-common/: Cargo.toml
tests-common/src/: lib.rs
token-exposure-voting/: Cargo.toml
token-exposure-voting/meta/: Cargo.toml
token-exposure-voting/src/: config.rs  lib.rs  views.rs  vote.rs
token-exposure-voting/tests/: token_exposure_voting_tests.rs
token-exposure-voting/wasm/: Cargo.toml
token-voting-energy/: Cargo.toml
token-voting-energy/meta/: Cargo.toml
token-voting-energy/scenarios/: token_voting_energy.scen.json
token-voting-energy/src/: token_voting_energy.rs
token-voting-energy/tests/: token_voting_energy_scenario_go_test.rs  token_voting_energy_scenario_rs_test.rs
token-voting-energy/wasm/: Cargo.toml
(+105 files in other folders)
