[workspace]
members = [
  "auto-farm",
  "auto-farm/meta",
  "auto-pos-creator",
  "auto-pos-creator/meta",
  "auto-pos-creator/interact",
  "locked-token-pos-creator",
  "locked-token-pos-creator/meta",
  "farm-extra-rewards-wrapper",
  "farm-extra-rewards-wrapper/meta",
  "composable-tasks",
  "composable-tasks/meta",
  "energy-dao",
  "energy-dao/meta",
  "tests-common"
]
