[workspace]
members = [
  "auto-farm",
  "auto-farm/meta",
  "auto-pos-creator",
  "auto-pos-creator/meta",
  "composable-tasks",
  "composable-tasks/meta",
  "dca-module",
  "dca-module/meta",
  "energy-dao",
  "energy-dao/meta",
  "farm-extra-rewards-wrapper",
  "farm-extra-rewards-wrapper/meta",
  "locked-token-pos-creator",
  "locked-token-pos-creator/meta",
  "tests-common"
]
