[package]
name = "auto-farm"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.50.5"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.50.5"

[dependencies.multiversx-wegld-swap-sc]
version = "=0.50.5"

[dependencies.read_external_storage]
path = "../common/modules/read_external_storage"

[dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.farm-staking]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.farm-staking-proxy]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.fees-collector]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.metabonding]
git = "https://github.com/multiversx/mx-metabonding-sc"
rev = "50097ca"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.mergeable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.legacy_token_decode_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dependencies.lkmex-transfer]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.5"

[dev-dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dev-dependencies.farm-boosted-yields]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dev-dependencies.config]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dev-dependencies.locking_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dev-dependencies.farm_token]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dev-dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dev-dependencies.sc_whitelist_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "c061a85"

[dev-dependencies.tests-common]
path = "../tests-common"
features = ["enable-tests-common"]
