[package]
name = "composable-tasks"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.53.2"

[dev-dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.multiversx-sc]
version = "=0.53.2"

[dependencies.multiversx-sc-modules]
version = "=0.53.2"

[dependencies.multiversx-wegld-swap-sc]
version = "=0.53.2"

[dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.router]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"
