[package]
name = "composable-tasks"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.60.0"

[dev-dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "bff93fc"

[dependencies.multiversx-sc]
version = "=0.60.0"

[dependencies.multiversx-sc-modules]
version = "=0.60.0"

[dependencies.multiversx-wegld-swap-sc]
version = "=0.60.0"

[dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "bff93fc"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "bff93fc"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "bff93fc"

[dependencies.router]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "bff93fc"
