[package]
name = "energy-dao"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.53.2"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.53.2"

[dependencies.read_external_storage]
path = "../common/modules/read_external_storage"

[dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.farm-staking]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.farm-staking-proxy]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.fees-collector]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.locked-token-wrapper]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.permissions_module]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.mergeable]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.sc_whitelist_module]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.token_send]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.farm_token]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.locking_module]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.config]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.farm-boosted-yields]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.legacy_token_decode_module]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dependencies.lkmex-transfer]
git = "https://github.com/multiversx/mx-exchange-sc"
tag = "v3.4.1-rc3"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.2"
