[package]
name = "energy-dao"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.53.2"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.53.2"

[dependencies.read_external_storage]
path = "../common/modules/read_external_storage"

[dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.farm-staking]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.farm-staking-proxy]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.fees-collector]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.locked-token-wrapper]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.permissions_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.mergeable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.sc_whitelist_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.token_send]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.farm_token]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.locking_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.config]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.farm-boosted-yields]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.legacy_token_decode_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dependencies.lkmex-transfer]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "982e32ce6d3761f064e8a3734a3c0509a3e568bb"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.53.2"
