[package]
name = "exchange-deployer"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
features = ["esdt-token-payment-legacy-decode"]
version = "=0.46.1"

[dependencies.multiversx-sc-modules]
version = "=0.46.1"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "0c7f45e"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "0c7f45e"

[dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "0c7f45e"

[dependencies.proxy_dex]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "0c7f45e"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.46.1"
