[package]
name = "farm-extra-rewards-wrapper"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.config]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.farm_token]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.contexts]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.farm_base_impl]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.token_send]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.permissions_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.fixed-supply-token]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.mergeable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.unwrappable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.math]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dependencies.auto-farm]
path = "../auto-farm"

[dependencies.multiversx-sc]
version = "=0.53.2"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.53.2"

[dependencies.read_external_storage]
path = "../common/modules/read_external_storage"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"

[dev-dependencies.tests-common]
path = "../tests-common"
features = ["enable-tests-common"]

[dev-dependencies.multiversx-sc-scenario]
version = "=0.53.2"

[dev-dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"

[dev-dependencies.sc_whitelist_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "e9bcec0"
