[package]
name = "locked-token-pos-creator"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.50.0"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.auto-pos-creator]
path = "../auto-pos-creator"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.router]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.proxy_dex]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.read_external_storage]
path = "../common/modules/read_external_storage"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.0"

[dev-dependencies.multiversx-sc-modules]
version = "=0.50.0"

[dev-dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies.farm_base_impl]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies.config]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies.farm_token]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies.rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies.sc_whitelist_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies.farm-boosted-yields]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies.farm-with-locked-rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies.locking_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"
